added payment method